# mcprocess

./: .gitignore  Cargo.toml  README.md  package.json
cli/: Cargo.toml
cli/src/: args.rs  main.rs
cli/src/cmds/: import.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/data/: global.rs  logs.rs  mod.rs
core/src/network/: mod.rs  packets.rs
daemon/: Cargo.toml
daemon/src/: concurrency.rs  main.rs  servers.rs  sock.rs
