[package]
name = "mprocd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
fern = "0.6.2"
humantime = "2.1.0"
ctrlc = "3.4"